# design-pattern-lib

./: .gitignore  LICENSE  README.md  readme.md.txt
AbstractFactory_v1/: BmwFactory.h  BmwSportCar.cpp  BmwSportCar.h  BmwSuv.cpp  BmwSuv.h  ICar.h  ICarFactory.h  ISportCar.h  ISuv.h  MercedesFactory.cpp  MercedesFactory.h  MercedesSportCar.cpp  MercedesSportCar.h  MercedesSuv.cpp  MercedesSuv.h  main.cpp
AbstractFactory_v2/: BmwFactory.cpp  BmwFactory.h  BmwSportCar.h  BmwSuv.h  CMakeLists.txt  CarFactorySingleton.cpp  CarFactorySingleton.h  ISportCar.h  MercedesFactory.h  MercedesSuv.h  main.cpp
Behavioral/ChainOfResponsability_v1/: CMakeLists.txt  Company.cpp  Company.h  Department.cpp  Department.h  Employee.cpp  Employee.h  IWorkResource.h  ResourceFactory.cpp  ResourceFactory.h  Team.cpp  Team.h  main.cpp
Behavioral/Interpreter_v1/: Addition.cpp  Addition.h  CMakeLists.txt  IExpression.h  Number.cpp  Number.h  Subtraction.cpp  Subtraction.h  main.cpp
Behavioral/Mediator_v1/: AirConditioner.cpp  AirConditioner.h  CMakeLists.txt  HomeController.cpp  HomeController.h  IMediator.h  ISmartDevice.h  Thermostat.cpp  Thermostat.h  main.cpp
Behavioral/Memento_v1/: CMakeLists.txt  Page.cpp  Page.h  PageHistory.cpp  PageHistory.h  PageMemento.cpp  PageMemento.h  PageObject.cpp  PageObject.h  main.cpp
Behavioral/Observer_v1/: CMakeLists.txt  Client.cpp  Client.h  TemperatureLogger.cpp  TemperatureLogger.h  main.cpp
Behavioral/State_v1/: Alive.cpp  Alive.h  CMakeLists.txt  Character.cpp  Character.h  IState.h  Wounded.cpp  Wounded.h  main.cpp
Behavioral/Strategy_v1/: BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  DfsIterative.cpp  DfsIterative.h  DfsRecursive.cpp  DfsRecursive.h  ISearchAlgo.h  Node.cpp  Node.h  main.cpp
Behavioral/Template_v1/: CMakeLists.txt  CmosSignal.cpp  CmosSignal.h  ISignal.h  TtlSignal.cpp  TtlSignal.h  main.cpp
Behavioral/Template_v2/: CMakeLists.txt  Encoder.cpp  Encoder.h  Gyroscope.cpp  Gyroscope.h  Sensor.cpp  Sensor.h  main.cpp
Behavioral/Visitor_v1/: AirConditioner.cpp  AirConditioner.h  CMakeLists.txt  ISmartDevice.h  IVisitor.h  LoggerVisitor.cpp  LoggerVisitor.h  Thermostat.cpp  Thermostat.h  main.cpp
Creational/AbstractFactory_v1/: CMakeLists.txt  ICar.h  main.cpp
Creational/AbstractFactory_v2/: CarFactorySingleton.cpp  ICarFactory.h  ISuv.h  MercedesSportCar.h
Creational/Builder_v1/: BmwBuilder.cpp  BmwBuilder.h  CMakeLists.txt  Car.cpp  Car.h  Director.cpp  Director.h  ICarBuilder.h  TeslaBuilder.cpp  TeslaBuilder.h  main.cpp
Creational/FactoryMethod_v1/: LatheCnc.h  MillCncFactory.cpp  MillCncFactory.h  main.cpp
Creational/FactoryMethod_v2/: CncFactory.h  MillCnc.cpp  main.cpp
Creational/FactoryMethod_v3/: CncFactory.h  ICnc.h  LatheCnc.h  main.cpp
Creational/FactoryMethod_v4/: BatteryDrillFactory.h  CMakeLists.txt  Drill.cpp  Drill.h  DrillFactory.cpp  DrillFactory.h  main.cpp
Creational/Prototype_v1/: CMakeLists.txt  FungiCell.cpp  ICell.h  PlantCell.h
Creational/Prototype_v2/: CMakeLists.txt  CellRegistry.cpp  CellRegistry.h  PlantCell.h  main.cpp
Creational/Prototype_v3/: CMakeLists.txt  CellSingleton.cpp  CellSingleton.h  FungiCell.h  ICell.h  PlantCell.h  main.cpp
Creational/Singleton_v1/: Cache.cpp  main.cpp
Creational/Singleton_v2/: CMakeLists.txt  Cache.h  main.cpp
FactoryMethod_v1/: CMakeLists.txt  ICnc.h  ICncFactory.h  LatheCnc.cpp  LatheCnc.h  LatheCncFactory.cpp  LatheCncFactory.h  MillCnc.cpp  MillCnc.h  MillCncFactory.cpp  MillCncFactory.h  main.cpp
FactoryMethod_v2/: CMakeLists.txt  CncFactory.cpp  main.cpp
FactoryMethod_v3/: CMakeLists.txt  MillCnc.h
FactoryMethod_v4/: BatteryDrill.cpp  BatteryDrill.h  BatteryDrillFactory.cpp  BatteryDrillFactory.h  Drill.h  DrillFactory.h
Prototype_v1/: FungiCell.cpp  FungiCell.h  PlantCell.cpp  main.cpp
Prototype_v2/: FungiCell.cpp  FungiCell.h  ICell.h  PlantCell.cpp
Singleton/: CMakeLists.txt  ILog.h  StdLog.cpp  StdLog.h  main.cpp
Singleton_v1/: CMakeLists.txt  Cache.h  ILog.h  StdLog.h  main.cpp
Singleton_v2/: Cache.cpp  Cache.h  main.cpp
Structural/Adapter_v1/: CMakeLists.txt  UsbAdapterCToA.cpp  UsbAdapterCToA.h  UsbTypeA.h  UsbTypeC.h  main.cpp
Structural/Adapter_v2/: CMakeLists.txt  UsbAdapterCToA.cpp  UsbAdapterCToA.h  UsbTypeA.cpp  UsbTypeA.h  UsbTypeC.cpp  UsbTypeC.h  main.cpp
Structural/Composite_v1/: CMakeLists.txt  ILogicBlock.h  LogicAnd.cpp  LogicAnd.h  LogicNot.cpp  LogicNot.h  LogicOr.cpp  LogicOr.h  LogicSignal.cpp  LogicSignal.h  main.cpp
Structural/Decorator_v1/: CMakeLists.txt  IPizza.h  Pizza.cpp  Pizza.h  PizzaDecorator.h  PizzaFactory.cpp  PizzaFactory.h  PizzaMarinara.cpp  PizzaMarinara.h  PizzaTirata.cpp  PizzaTirata.h  main.cpp
Structural/Facade_v1/: CMakeLists.txt  HashTableDatabase.cpp  HashTableDatabase.h  IDatabase.h  ILogger.h  StdOutLogger.cpp  StdOutLogger.h  TemperatureRecorder.cpp  TemperatureRecorder.h  main.cpp
Structural/Flyweight_v1/: CMakeLists.txt  Letter.cpp  Letter.h  LetterFactory.cpp  LetterFactory.h  Sentence.cpp  Sentence.h  main.cpp
Structural/Proxy_v1/: CMakeLists.txt  ILogger.h  LoggerProxy.cpp  LoggerProxy.h  StdLogger.cpp  StdLogger.h  main.cpp
